# jikken-project

./: .gitignore  CMakeLists.txt  README.md  agenda.txt  platform_settings.cmake
src/: CMakeLists.txt  HelloWorldApp.cpp  HelloWorldApp.h  jikken.cpp  video_test.cpp
src/bubble/: BubbleAlgorithm.cpp  BubbleCounter.cpp  CMakeLists.txt  VideoCleaner.cpp  bubble-count.cpp  video-clean.cpp
src/bubble/include/: BubbleAlgorithm.h  BubbleCounter.h  VideoCleaner.h
src/camera/: CMakeLists.txt  CameraController.cpp  CameraSerial.cpp  CameraVideoCleaner.cpp  CameraVideoStream.cpp
src/camera/include/: CameraButtonProperty.h  CameraCommand.h  CameraController.h  CameraMenu.h  CameraMenuBlank.h  CameraMenuItem.h  CameraMenuWrapperProperty.h  CameraSerial.h  CameraSimpleProperty.h  CameraToggleProperty.h  CameraVideoCleaner.h  CameraVideoStream.h  VideoSubscriber.h
src/cameramenu/: CMakeLists.txt
src/cameramenu/include/: CameraCommand.h  CameraMenu.h  CameraMenuBlank.h  CameraMenuItem.h  CameraMenuWrapperProperty.h  CameraQuerier.h  CameraSimpleProperty.h  CameraToggleProperty.h
src/gui/: CMakeLists.txt  ConfigPanel.cpp  DownloadPanel.cpp  JikkenFrame.cpp  PropertiesFrame.cpp  SettingsPanel.cpp  StatusPanel.cpp  VideoPanel.cpp
src/gui/include/: ConfigPanel.h  DownloadPanel.h  JikkenFrame.h  PropertiesFrame.h  SettingsPanel.h  StatusPanel.h  VideoPanel.h
src/properties/: CMakeLists.txt  JikkenPropertiesHolder.cpp
src/properties/include/: JikkenGlobals.h  JikkenPropertiesHolder.h  Logger.h  MainManager.h  StatusSetter.h
